# TorchRender

./: .coveragerc  .gitignore  .travis.yml  LICENSE-MIT  README.md  bash_installer.sh  pyproject.toml  requirements.txt  setup.py
examples/: checker.py  draw_lines.py  equation.py  grid.py  interactive_test_pixel_shader.py  line.py
torchrender/: geometry2d.py  pixel_shader.py  util.py  vertex_shader.py
